tests/valid/variables/no_initialize.rs
/*
return: 0
*/

main(): i32 {
    a: i64;
    return 0;
}