tests/invalid/scoping/double_define.rs
/*
fail: 1
*/

main(): i32 {
    {
        a: i64;
        a: i64;
    }
}